compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__numbers__numbers_with_scientific_notation.snap
---
source: compiler-core/src/erlang/tests/numbers.rs
expression: "\nconst i = 100.001e223\nconst j = -100.001e-223\n\npub fn main() {\n  i\n  j\n}\n"
---
----- SOURCE CODE

const i = 100.001e223
const j = -100.001e-223

pub fn main() {
  i
  j
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 5).
-spec main() -> float().
main() ->
    100.001e223,
-100.001e-223.
